navbar z-index overlay quicky fixy

--- a/web/ethereum.fluidity.money/src/scss/components/_toolbarMobile.scss
+++ b/web/ethereum.fluidity.money/src/scss/components/_toolbarMobile.scss
@@ -11,7 +11,7 @@
   text-align: center;
   align-items: center;
   background: rgba(10, 26, 32, 0.95);
-  z-index: 4;
+  z-index: 9999;
   border: 1px solid #979797;
   box-sizing: border-box;
   border-radius: 10px 0px 0px 10px;
