--- a/web/solana.fluidity.money/src/scss/components/_toolbarMobile.scss
+++ b/web/solana.fluidity.money/src/scss/components/_toolbarMobile.scss
@@ -11,7 +11,7 @@
   text-align: center;
   align-items: center;
   background: #1a1a1afa;
-  z-index: 4;
+  z-index: 9999;
   border: 1px solid #979797;
   box-sizing: border-box;
   border-radius: 10px 0px 0px 10px;
